--- a/css/index.css
+++ b/css/index.css
@@ -13,9 +13,9 @@ body {
   body .header_wrap {
     background-color: white;
     margin-top: 0;
-    position: fixed;
     top: 0;
-    width: 100%; }
+    width: 100%;
+    padding: 0 15px 0 15px; }
     body .header_wrap .header {
       max-width: 900px;
       margin-left: auto;
@@ -26,38 +26,64 @@ body {
         content: "";
         display: table;
         clear: both; }
+      @media screen and (max-width: 700px) {
+        body .header_wrap .header {
+          text-align: center; } }
       body .header_wrap .header #logo {
         width: 285px;
         height: 78px;
         background: url("images/logo.png");
         background-repeat: none;
         float: left; }
+        @media screen and (max-width: 700px) {
+          body .header_wrap .header #logo {
+            float: none;
+            display: block;
+            margin-left: auto;
+            margin-right: auto; } }
       body .header_wrap .header .nav {
         float: right;
         display: inline;
         clear: right;
-        margin: 7px 0 0 0; }
+        margin: 7px 0 0 0;
+        padding: 0; }
         body .header_wrap .header .nav li {
           display: inline;
           margin-left: 15px; }
           body .header_wrap .header .nav li a {
             text-decoration: none;
-            color: #25b49c; }
+            color: #00abff; }
           body .header_wrap .header .nav li a:hover {
-            color: #078c92; }
+            color: #007aff; }
+        @media screen and (max-width: 700px) {
+          body .header_wrap .header .nav {
+            padding-left: auto;
+            padding-right: auto;
+            text-align: center;
+            float: none;
+            display: block;
+            text-align: center;
+            width: 100%; }
+            body .header_wrap .header .nav li {
+              margin-left: 7px;
+              margin-right: 7px; } }
       body .header_wrap .header #social_nav {
         height: 30px; }
+        body .header_wrap .header #social_nav li {
+          float: right; }
+          @media screen and (max-width: 700px) {
+            body .header_wrap .header #social_nav li {
+              float: none; } }
       body .header_wrap .header #social_nav li a div {
         width: 30px;
         height: 30px;
-        float: right;
-        margin-left: 15px;
         border-radius: 50%;
-        background-color: #25b49c;
+        background-color: #00abff;
         background-repeat: no-repeat;
-        background-position: center; }
+        background-position: center;
+        display: inline-block; }
       body .header_wrap .header #social_nav li a div:hover {
-        background-color: #078c92; }
+        background-color: #007aff; }
       body .header_wrap .header #facebook {
         background: url(images/facebook.png); }
       body .header_wrap .header #twitter {
@@ -69,8 +95,8 @@ body {
       body .header_wrap .header #spotify {
         background: url(images/spotify.png); }
   body .page_body {
-    padding-top: 108px;
     clear: both;
+    padding: 0 15px 0 15px;
     max-width: 900px;
     margin-left: auto;
     margin-right: auto; }
