--- a/css/index.css
+++ b/css/index.css
@@ -5,85 +5,80 @@
   box-sizing: border-box; }
 
 body {
-  background-color: #eeeeee;
   font: 12pt Open Sans;
-  padding: 0;
+  padding: 0 4% 0 4%;
   margin: 0;
   color: #333333; }
+  body #soundcloud {
+    max-width: 400px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto; }
   body .header_wrap {
     background-color: white;
     margin-top: 0;
     top: 0;
     width: 100%;
-    padding: 0 15px 0 15px; }
+    padding: 0; }
     body .header_wrap .header {
-      max-width: 900px;
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: 20px;
-      padding-bottom: 10px; }
-      body .header_wrap .header:after {
-        content: "";
-        display: table;
-        clear: both; }
-      @media screen and (max-width: 700px) {
+      width: 100%;
+      padding: 25px 0 20px 0; }
+      @media screen and (max-width: 800px) {
         body .header_wrap .header {
           text-align: center; } }
       body .header_wrap .header #logo {
-        width: 285px;
-        height: 78px;
+        width: 200px;
+        height: 60px;
+        display: block;
         background: url("images/logo.png");
-        background-repeat: none;
-        float: left; }
-        @media screen and (max-width: 700px) {
-          body .header_wrap .header #logo {
-            float: none;
-            display: block;
-            margin-left: auto;
-            margin-right: auto; } }
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-left: auto;
+        margin-right: auto; }
       body .header_wrap .header .nav {
-        float: right;
-        display: inline;
-        clear: right;
-        margin: 7px 0 0 0;
-        padding: 0; }
+        margin: 15px 0 0 0;
+        padding: 0;
+        font-size: 13pt;
+        height: 30px; }
         body .header_wrap .header .nav li {
           display: inline;
           margin-left: 15px; }
           body .header_wrap .header .nav li a {
             text-decoration: none;
-            color: #00abff; }
+            color: #333333; }
           body .header_wrap .header .nav li a:hover {
-            color: #007aff; }
-        @media screen and (max-width: 700px) {
+            color: #aaaaaa; }
+        @media screen and (max-width: 800px) {
           body .header_wrap .header .nav {
-            padding-left: auto;
-            padding-right: auto;
+            margin-left: auto;
+            margin-right: auto;
             text-align: center;
-            float: none;
-            display: block;
             text-align: center;
             width: 100%; }
             body .header_wrap .header .nav li {
+              float: none;
               margin-left: 7px;
               margin-right: 7px; } }
+      body .header_wrap .header #main_nav {
+        float: right; }
+        @media screen and (max-width: 800px) {
+          body .header_wrap .header #main_nav {
+            float: none; } }
       body .header_wrap .header #social_nav {
-        height: 30px; }
-        body .header_wrap .header #social_nav li {
-          float: right; }
-          @media screen and (max-width: 700px) {
-            body .header_wrap .header #social_nav li {
-              float: none; } }
+        float: left; }
+        @media screen and (max-width: 800px) {
+          body .header_wrap .header #social_nav {
+            float: none; } }
       body .header_wrap .header #social_nav li a div {
         width: 30px;
         height: 30px;
+        display: inline-block;
         border-radius: 50%;
-        background-color: #00abff;
+        background-color: #333333;
         background-repeat: no-repeat;
-        background-position: center;
-        display: inline-block; }
+        background-position: center; }
       body .header_wrap .header #social_nav li a div:hover {
-        background-color: #007aff; }
+        background-color: #aaaaaa; }
       body .header_wrap .header #facebook {
         background: url(images/facebook.png); }
       body .header_wrap .header #twitter {
@@ -96,27 +91,28 @@ body {
         background: url(images/spotify.png); }
   body .page_body {
     clear: both;
-    padding: 0 15px 0 15px;
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto; }
-    body .page_body:after {
-      content: "";
-      display: table;
-      clear: both; }
+    background-color: #eeeeee; }
     body .page_body .page_element {
       width: 100%;
-      margin-top: 50px; }
-    body .page_body #page_photo {
-      overflow: hidden; }
-      body .page_body #page_photo img {
-        width: 100%; }
+      padding: 40px;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto; }
+      body .page_body .page_element:after {
+        content: "";
+        display: table;
+        clear: both; }
     body .page_body #page_soundcloud {
       display: none;
       margin-left: auto;
       margin-right: auto; }
     body .page_body #page_about {
       display: none; }
+    body .page_body #page_media {
+      display: none;
+      overflow: hidden; }
+      body .page_body #page_media img {
+        width: 100%; }
     body .page_body #page_contact {
       display: none; }
       body .page_body #page_contact a {
