--- a/css/index.scss
+++ b/css/index.scss
@@ -4,49 +4,49 @@
 @import "neat/neat";
 
 $background-grey: #EEE;
-$yohannes: #00abff;
-$yohannes-hover: #007aff;
+$yohannes: #333;
+$yohannes-hover: #AAA;
 $body-text: #333;
-$mobile: new-breakpoint(max-width 700px 12);
+$mobile: new-breakpoint(max-width 800px 12);
 
 body{
-	background-color: $background-grey;
 	font: 12pt Open Sans;
-	padding: 0;
+	padding: 0 4% 0 4%;
 	margin: 0;
 	color: $body-text;
+	#soundcloud{
+		max-width: 400px;
+		display: block;
+		margin-right: auto;
+		margin-left: auto;
+	}
 	.header_wrap{
 		background-color: white;
 		margin-top: 0;
 		top: 0;
 		width: 100%;
-		padding: 0 15px 0 15px;
+		padding: 0;
 		.header{
-			@include outer-container;
-			padding-top: 20px;
-			padding-bottom: 10px;
+			width: 100%;
+			padding: 25px 0 20px 0;
 			@include media($mobile){
 				text-align: center;
 			}
 			#logo {
-				width: 285px;
-				height: 78px;
+				width: 200px;
+				height: 60px;
+				display: block;
 				background: url('images/logo.png');
-				background-repeat: none;
-				float: left;
-				@include media($mobile){
-					float: none;
-					display: block;
-					margin-left: auto;
-					margin-right: auto;
-				}
+				background-size: contain;
+				background-repeat: no-repeat;
+				margin-left: auto;
+				margin-right: auto;
 			}
 			.nav{
-				float: right;
-				display: inline;
-				clear: right;
-				margin: 7px 0 0 0;
+				margin: 15px 0 0 0;
 				padding: 0;
+				font-size: 13pt; 
+				height: 30px;
 				li{
 					display: inline;
 					margin-left: 15px;
@@ -59,36 +59,38 @@ body{
 					}
 				}
 				@include media($mobile){
-					padding-left: auto;
-					padding-right: auto;
+					margin-left: auto;
+					margin-right: auto;
 					text-align: center;
-					float: none;
-					display: block;
 					text-align: center;
 					width: 100%;
 					li{
+						float: none;
 						margin-left: 7px;
 						margin-right: 7px;
 					}
 				}
 			}
+			#main_nav{
+				float: right;
+				@include media($mobile){
+					float: none;
+				}
+			}
 			#social_nav{
-				height: 30px;
-				li{
-					float: right;
-					@include media($mobile){
-						float: none;
-					}
+				float: left;
+				@include media($mobile){
+					float: none;
 				}
 			}
 			#social_nav li a div{
 				width: 30px;
 				height: 30px;
+				display: inline-block;
 				border-radius: 50%; 
 				background-color: $yohannes;
 				background-repeat: no-repeat;
-				background-position: center; 
-				display: inline-block;
+				background-position: center;
 			}
 			#social_nav li a div:hover{
 				background-color: $yohannes-hover;
@@ -112,17 +114,13 @@ body{
 	}
 	.page_body{
 		clear: both;
-		padding: 0 15px 0 15px;
-		@include outer-container;
+		background-color: $background-grey;
 		.page_element{
 			width: 100%;
-			margin-top: 50px;
+			padding: 40px;
+			@include outer-container;
 		}
-		#page_photo{
-			overflow: hidden;
-			img {
-				width: 100%;
-			}
+		#page_home{
 		}
 		#page_soundcloud{
 			display: none;
@@ -131,6 +129,13 @@ body{
 		}
 		#page_about {
 			display: none;
+		}
+		#page_media{
+			display: none;
+			overflow: hidden;
+			img {
+				width: 100%;
+			}
 		}
 		#page_contact{
 			display: none;
