--- a/css/index.scss
+++ b/css/index.scss
@@ -20,6 +20,9 @@ body{
 		margin-right: auto;
 		margin-left: auto;
 	}
+	#main_nav li a.active{
+		color: $yohannes-hover;
+	}
 	.header_wrap{
 		background-color: white;
 		margin-top: 0;
