--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,6 @@
 
 body {
   font: 12pt Open Sans;
-  padding: 0 4% 0 4%;
   margin: 0;
   color: #333333; }
   body #soundcloud {
@@ -21,16 +20,18 @@ body {
     margin-top: 0;
     top: 0;
     width: 100%;
-    padding: 0; }
+    padding: 0 4% 0 4%;
+    position: fixed;
+    background-color: white; }
     body .header_wrap .header {
       width: 100%;
-      padding: 25px 0 20px 0; }
+      padding: 20px 0 10px 0; }
       @media screen and (max-width: 800px) {
         body .header_wrap .header {
           text-align: center; } }
       body .header_wrap .header #logo {
         width: 200px;
-        height: 60px;
+        height: 70px;
         display: block;
         background: url("images/logo.png");
         background-size: contain;
@@ -101,7 +102,7 @@ body {
         background-color: #81b71a; }
   body .page_body {
     clear: both;
-    background-color: #eeeeee; }
+    padding-top: 85px; }
     body .page_body .page_element {
       width: 100%;
       padding: 40px;
@@ -122,7 +123,9 @@ body {
       display: none;
       overflow: hidden; }
       body .page_body #page_media img {
-        width: 100%; }
+        width: 600px;
+        margin-left: auto;
+        margin-right: auto; }
     body .page_body #page_contact {
       display: none; }
       body .page_body #page_contact a {
