--- a/css/index.scss
+++ b/css/index.scss
@@ -149,10 +149,13 @@ body{
 		#page_media{
 			display: none;
 			overflow: hidden;
-			img {
+			.media_image {
 				width: 600px;
 				margin-left: auto; 
 				margin-right: auto;
+				img {
+					width: 100%;
+				}
 			}
 		}
 		#page_contact{
