--- a/css/index.scss
+++ b/css/index.scss
@@ -9,10 +9,11 @@ $yohannes-hover: #AAA;
 $body-text: #333;
 $mobile: new-breakpoint(max-width 800px 12);
 
-body{
+html, body{
 	font: 12pt Open Sans;
 	margin: 0;
 	color: $body-text;
+	height: 100%;
 	#soundcloud{
 		max-width: 400px;
 		display: block;
@@ -131,6 +132,8 @@ body{
 	.page_body{
 		clear: both;
 		padding-top: 85px;
+		background-color: rgba(0,0,0,.05);
+		min-height: 100%;
 		.page_element{
 			width: 100%;
 			padding: 40px;
@@ -145,6 +148,9 @@ body{
 		}
 		#page_about {
 			display: none;
+			p{
+				margin-bottom: 25px;
+			}
 		}
 		#page_media{
 			display: none;
@@ -154,6 +160,7 @@ body{
 			width: 600px;
 			margin-left: auto; 
 			margin-right: auto;
+			margin-bottom: 25px;
 			img {
 				width: 100%;
 			}
