--- a/css/index.scss
+++ b/css/index.scss
@@ -1,66 +1,86 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 @import "bourbon/bourbon"; // or "bourbon" when in Rails
 @import "grid-settings";
 @import "neat/neat";
 
-$background-grey: #EEE;
-$yohannes: #333;
-$yohannes-hover: #AAA;
-$body-text: #333;
+$background-grey: #F7F7F7;
+$yohannes_blue: #29B6F6;
+$yohannes_yellow: #FFEE58;
+$body-text: #3A3A3A;
 $mobile: new-breakpoint(max-width 800px 12);
 
 html, body{
-	font: 12pt Open Sans;
+	font: 12pt Roboto;
+	font-weight: 400;
 	margin: 0;
 	color: $body-text;
 	height: 100%;
+	a{
+		color: $body-text;
+		text-decoration: none;
+	}
+	a:hover{
+		color: $yohannes_yellow;
+	}
 	#soundcloud{
 		max-width: 400px;
 		display: block;
 		margin-right: auto;
 		margin-left: auto;
 	}
-	#main_nav li a.active{
-		color: $yohannes-hover;
+	h2{
+		font-size: 50px;
+		font-weight: 500;
+		margin-top: 0px;
+		margin-bottom: 20px;
 	}
 	.header_wrap{
-		background-color: white;
 		margin-top: 0;
 		top: 0;
 		width: 100%;
-		padding: 0 4% 0 4%;
 		position: fixed;
-		background-color: white;
+		background-color: $yohannes_blue;
 		.header{
-			width: 100%;
-			padding: 20px 0 10px 0;
+			width: 930px;
+			margin-left: auto;
+			margin-right: auto;
+			padding: 15px 0 10px 0;
+			text-align: right;
 			@include media($mobile){
 				text-align: center;
 			}
 			#logo {
-				width: 200px;
-				height: 70px;
-				display: block;
-				background: url('images/logo.png');
-				background-size: contain;
-				background-repeat: no-repeat;
-				margin-left: auto;
-				margin-right: auto;
+				width: 250px;
+				height: auto;
+				display: inline-block;
+				float: left;
+				margin-top: 10px;
+				img {
+					width: 100%;
+				}
+			}
+			.nav_wrap{
+				width: 500px;
+				display: inline;
+				float: right;
 			}
 			.nav{
-				margin: 15px 0 0 0;
+				margin: 5px 0 0 0;
 				padding: 0;
 				font-size: 13pt; 
+				font-weight: 300;
 				height: 30px;
+				display: inline-block;
 				li{
 					display: inline;
-					margin-left: 15px;
+					margin-left: 10px;
 					a{
 						text-decoration: none;
-						color: $yohannes;
+						color: white;
 					}
-					a:hover{
-						color: $yohannes-hover;
+					a:hover, .active{
+						color: $yohannes_yellow;
+						text-decoration: underline;
 					}
 				}
 				@include media($mobile){
@@ -77,101 +97,124 @@ html, body{
 				}
 			}
 			#main_nav{
-				float: right;
+				margin-top: 7px;
 				@include media($mobile){
 					float: none;
 				}
+				li{
+					margin-left: 15px;
+				}
 			}
 			#social_nav{
-				float: left;
 				@include media($mobile){
 					float: none;
 				}
 			}
 			#social_nav li a div{
-				width: 30px;
-				height: 30px;
+				width: 33px;
+				height: 33px;
 				display: inline-block;
 				border-radius: 50%; 
-				background-color: $yohannes;
+				background-color: white;
 				background-repeat: no-repeat;
 				background-position: center;
+			}
+			#social_nav li a div:hover{
+				background-color: $yohannes_yellow;
 			}
 			#facebook{
 				background: url(images/facebook.png);
 			}
 			#facebook:hover{
-				background-color: #3b5998;
+				//background-color: #3b5998;
 			}
 			#twitter{
 				background: url(images/twitter.png);
 			}
 			#twitter:hover{
-				background-color: #00aced;
+				//background-color: #00aced;
 			}
 			#instagram{
 				background: url(images/instagram.png);
 			}
 			#instagram:hover{
-				background-color: #517fa4;
+				//background-color: #517fa4;
 			}
 			#soundcloud{
 				background: url(images/soundcloud.png);
 			}
 			#soundcloud:hover{
-				background-color: #f70;
+				//background-color: #f70;
 			}
 			#spotify{
 				background: url(images/spotify.png);
 			}
 			#spotify:hover{
-				background-color: #81b71a;
+				//background-color: #81b71a;
 			}
+		}
+		.header:after {
+		  content:"";
+		  display:table;
+		  clear:both;
 		}
 	}
 	.page_body{
 		clear: both;
-		padding-top: 85px;
-		background-color: rgba(0,0,0,.05);
+		padding-top: 104px;
 		min-height: 100%;
 		.page_element{
-			width: 100%;
-			padding: 40px;
-			@include outer-container;
+			width: 930px;
+			margin-left: auto;
+			margin-right: auto;
+			padding-top: 50px;
+			padding-bottom: 50px
 		}
 		#page_home{
 		}
 		#page_soundcloud{
 			display: none;
-			margin-left: auto;
-			margin-right: auto;
 		}
 		#page_about {
 			display: none;
-			p{
-				margin-bottom: 25px;
+			.about_text{
+				width: 40%;
+				float: left;
+				font-weight: 300;
+				font-size: 16px;
 			}
+			.about_image{
+				width: 58%;
+				float: right;
+				img{
+					width: 100%;
+				}
+			}
+
 		}
 		#page_media{
 			display: none;
 			overflow: hidden;
-		}
-		.media_image {
-			width: 600px;
-			margin-left: auto; 
-			margin-right: auto;
-			margin-bottom: 25px;
-			img {
-				width: 100%;
+			.media_image {
+				width: 32.3%;
+				height: 188px;
+				margin-right: 1%;
+				float: left;
+				margin-bottom: 10px;
+				overflow: hidden;
+				img {
+					max-width: 100%;
+					height: auto;
+				}
+			}
+			.media_image:nth-child(3) {
+			    margin-right: 0;
 			}
 		}
 		
+		
 		#page_contact{
 			display: none;
-			a{
-				color: $body-text;
-				text-decoration: none;
-			}
 		}
 	}
 }
