--- a/css/index.css
+++ b/css/index.css
@@ -1,57 +1,73 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 html, body {
-  font: 12pt Open Sans;
+  font: 12pt Roboto;
+  font-weight: 400;
   margin: 0;
-  color: #333333;
+  color: #3a3a3a;
   height: 100%; }
+  html a, body a {
+    color: #3a3a3a;
+    text-decoration: none; }
+  html a:hover, body a:hover {
+    color: #ffee58; }
   html #soundcloud, body #soundcloud {
     max-width: 400px;
     display: block;
     margin-right: auto;
     margin-left: auto; }
-  html #main_nav li a.active, body #main_nav li a.active {
-    color: #aaaaaa; }
+  html h2, body h2 {
+    font-size: 50px;
+    font-weight: 500;
+    margin-top: 0px;
+    margin-bottom: 20px; }
   html .header_wrap, body .header_wrap {
-    background-color: white;
     margin-top: 0;
     top: 0;
     width: 100%;
-    padding: 0 4% 0 4%;
     position: fixed;
-    background-color: white; }
+    background-color: #29b6f6; }
     html .header_wrap .header, body .header_wrap .header {
-      width: 100%;
-      padding: 20px 0 10px 0; }
+      width: 930px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 15px 0 10px 0;
+      text-align: right; }
       @media screen and (max-width: 800px) {
         html .header_wrap .header, body .header_wrap .header {
           text-align: center; } }
       html .header_wrap .header #logo, body .header_wrap .header #logo {
-        width: 200px;
-        height: 70px;
-        display: block;
-        background: url("images/logo.png");
-        background-size: contain;
-        background-repeat: no-repeat;
-        margin-left: auto;
-        margin-right: auto; }
+        width: 250px;
+        height: auto;
+        display: inline-block;
+        float: left;
+        margin-top: 10px; }
+        html .header_wrap .header #logo img, body .header_wrap .header #logo img {
+          width: 100%; }
+      html .header_wrap .header .nav_wrap, body .header_wrap .header .nav_wrap {
+        width: 500px;
+        display: inline;
+        float: right; }
       html .header_wrap .header .nav, body .header_wrap .header .nav {
-        margin: 15px 0 0 0;
+        margin: 5px 0 0 0;
         padding: 0;
         font-size: 13pt;
-        height: 30px; }
+        font-weight: 300;
+        height: 30px;
+        display: inline-block; }
         html .header_wrap .header .nav li, body .header_wrap .header .nav li {
           display: inline;
-          margin-left: 15px; }
+          margin-left: 10px; }
           html .header_wrap .header .nav li a, body .header_wrap .header .nav li a {
             text-decoration: none;
-            color: #333333; }
-          html .header_wrap .header .nav li a:hover, body .header_wrap .header .nav li a:hover {
-            color: #aaaaaa; }
+            color: white; }
+          html .header_wrap .header .nav li a:hover, html .header_wrap .header .nav li .active, body .header_wrap .header .nav li a:hover, body .header_wrap .header .nav li .active {
+            color: #ffee58;
+            text-decoration: underline; }
         @media screen and (max-width: 800px) {
           html .header_wrap .header .nav, body .header_wrap .header .nav {
             margin-left: auto;
@@ -64,78 +80,77 @@ html, body {
               margin-left: 7px;
               margin-right: 7px; } }
       html .header_wrap .header #main_nav, body .header_wrap .header #main_nav {
-        float: right; }
+        margin-top: 7px; }
         @media screen and (max-width: 800px) {
           html .header_wrap .header #main_nav, body .header_wrap .header #main_nav {
             float: none; } }
-      html .header_wrap .header #social_nav, body .header_wrap .header #social_nav {
-        float: left; }
-        @media screen and (max-width: 800px) {
-          html .header_wrap .header #social_nav, body .header_wrap .header #social_nav {
-            float: none; } }
+        html .header_wrap .header #main_nav li, body .header_wrap .header #main_nav li {
+          margin-left: 15px; }
+      @media screen and (max-width: 800px) {
+        html .header_wrap .header #social_nav, body .header_wrap .header #social_nav {
+          float: none; } }
       html .header_wrap .header #social_nav li a div, body .header_wrap .header #social_nav li a div {
-        width: 30px;
-        height: 30px;
+        width: 33px;
+        height: 33px;
         display: inline-block;
         border-radius: 50%;
-        background-color: #333333;
+        background-color: white;
         background-repeat: no-repeat;
         background-position: center; }
+      html .header_wrap .header #social_nav li a div:hover, body .header_wrap .header #social_nav li a div:hover {
+        background-color: #ffee58; }
       html .header_wrap .header #facebook, body .header_wrap .header #facebook {
         background: url(images/facebook.png); }
-      html .header_wrap .header #facebook:hover, body .header_wrap .header #facebook:hover {
-        background-color: #3b5998; }
       html .header_wrap .header #twitter, body .header_wrap .header #twitter {
         background: url(images/twitter.png); }
-      html .header_wrap .header #twitter:hover, body .header_wrap .header #twitter:hover {
-        background-color: #00aced; }
       html .header_wrap .header #instagram, body .header_wrap .header #instagram {
         background: url(images/instagram.png); }
-      html .header_wrap .header #instagram:hover, body .header_wrap .header #instagram:hover {
-        background-color: #517fa4; }
       html .header_wrap .header #soundcloud, body .header_wrap .header #soundcloud {
         background: url(images/soundcloud.png); }
-      html .header_wrap .header #soundcloud:hover, body .header_wrap .header #soundcloud:hover {
-        background-color: #f70; }
       html .header_wrap .header #spotify, body .header_wrap .header #spotify {
         background: url(images/spotify.png); }
-      html .header_wrap .header #spotify:hover, body .header_wrap .header #spotify:hover {
-        background-color: #81b71a; }
+    html .header_wrap .header:after, body .header_wrap .header:after {
+      content: "";
+      display: table;
+      clear: both; }
   html .page_body, body .page_body {
     clear: both;
-    padding-top: 85px;
-    background-color: rgba(0, 0, 0, 0.05);
+    padding-top: 104px;
     min-height: 100%; }
     html .page_body .page_element, body .page_body .page_element {
-      width: 100%;
-      padding: 40px;
-      max-width: 900px;
+      width: 930px;
       margin-left: auto;
-      margin-right: auto; }
-      html .page_body .page_element:after, body .page_body .page_element:after {
-        content: "";
-        display: table;
-        clear: both; }
+      margin-right: auto;
+      padding-top: 50px;
+      padding-bottom: 50px; }
     html .page_body #page_soundcloud, body .page_body #page_soundcloud {
-      display: none;
-      margin-left: auto;
-      margin-right: auto; }
+      display: none; }
     html .page_body #page_about, body .page_body #page_about {
       display: none; }
-      html .page_body #page_about p, body .page_body #page_about p {
-        margin-bottom: 25px; }
+      html .page_body #page_about .about_text, body .page_body #page_about .about_text {
+        width: 40%;
+        float: left;
+        font-weight: 300;
+        font-size: 16px; }
+      html .page_body #page_about .about_image, body .page_body #page_about .about_image {
+        width: 58%;
+        float: right; }
+        html .page_body #page_about .about_image img, body .page_body #page_about .about_image img {
+          width: 100%; }
     html .page_body #page_media, body .page_body #page_media {
       display: none;
       overflow: hidden; }
-    html .page_body .media_image, body .page_body .media_image {
-      width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 25px; }
-      html .page_body .media_image img, body .page_body .media_image img {
-        width: 100%; }
+      html .page_body #page_media .media_image, body .page_body #page_media .media_image {
+        width: 32.3%;
+        height: 188px;
+        margin-right: 1%;
+        float: left;
+        margin-bottom: 10px;
+        overflow: hidden; }
+        html .page_body #page_media .media_image img, body .page_body #page_media .media_image img {
+          max-width: 100%;
+          height: auto; }
+      html .page_body #page_media .media_image:nth-child(3), body .page_body #page_media .media_image:nth-child(3) {
+        margin-right: 0; }
     html .page_body #page_contact, body .page_body #page_contact {
       display: none; }
-      html .page_body #page_contact a, body .page_body #page_contact a {
-        color: #333333;
-        text-decoration: none; }
