--- a/css/index.scss
+++ b/css/index.scss
@@ -4,7 +4,7 @@
 @import "neat/neat";
 
 $background-grey: #F7F7F7;
-$yohannes_blue: #29B6F6;
+$yohannes_blue: #03A9F4;
 $yohannes_yellow: #FFEE58;
 $body-text: #3A3A3A;
 $mobile: new-breakpoint(max-width 800px 12);
@@ -50,7 +50,7 @@ html, body{
 				text-align: center;
 			}
 			#logo {
-				width: 250px;
+				width: 300px;
 				height: auto;
 				display: inline-block;
 				float: left;
