--- a/css/index.scss
+++ b/css/index.scss
@@ -69,7 +69,7 @@ html, body{
 		position: relative;
 		margin: 0;
 		padding: 0;
-		overflow: auto;
+		overflow: scroll;
 		.top_section{
 			min-height: 100%;
 			position: relative;
