--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,8 @@ html, body {
   color: #3a3a3a;
   height: 100%;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow: scroll; }
   html .header, body .header {
     height: 75px;
     position: fixed;
