add padding for mobile

--- a/css/index.css
+++ b/css/index.css
@@ -78,11 +78,13 @@ html, body {
         left: 0;
         visibility: hidden; }
       html .page_body .content_wrap .content_block, body .page_body .content_wrap .content_block {
-        max-width: 1000px;
+        max-width: 1100px;
         margin-left: auto;
         margin-right: auto;
         padding-top: 45px;
         padding-bottom: 65px;
+        padding-left: 50px;
+        padding-right: 50px;
         text-align: center; }
         html .page_body .content_wrap .content_block h2, body .page_body .content_wrap .content_block h2 {
           margin-top: 0;
