--- a/css/index.scss
+++ b/css/index.scss
@@ -97,11 +97,13 @@ html, body{
 			    visibility: hidden;
 			}
 			.content_block{
-				max-width: 1000px;
+				max-width: 1100px;
 				margin-left: auto;
 				margin-right: auto;
 				padding-top: 45px;
 				padding-bottom: 65px;
+				padding-left: 50px;
+				padding-right: 50px;
 				text-align: center;
 				h2{
 					//color: white;
