--- a/css/index.scss
+++ b/css/index.scss
@@ -46,6 +46,8 @@ html, body{
 					color: white;
 					text-decoration: none;
 					font-size: 18px;
+
+					transition: 0.2s;
 				}
 				a:hover{
 					color: $yohannes_red;
